# EE-A

./: .gitignore  CMakeLists.txt  README.md  filtered.csv  spatial.cpp  timing_test.cpp  trial.csv
MATLAB/: kalman.m  kalman3.m  kalman6.m  numerical_int.m
embedded/: .remote-sync.json  ADXL345.cpp  ADXL345.h  ADXL345_threaded.cpp  ADXL345_threaded.h  CMakeLists.txt  a.out  bcm_spi_test.cpp  circularfifo_memory_sequential_consistent.hpp  data_read_test.cpp  filtered.csv  notes.txt  out.txt  q_test.cpp  record_save  record_save.cpp  spi_test.cpp  spi_thread.cpp  test.cpp  timing_test.cpp  trial.csv
embedded/trials/: backforth1.csv  backforth2_filtered.csv  corner.csv  extension2.csv  extension3_filtered.csv  skateboard1.csv  skateboard2.csv  stationary.csv
fft/: a.out  ambientfft.cpp  ambientfft.hpp  filtered.csv  filtertaps.csv  notes.txt  songsegment.csv  test.cpp
fft/liquid-dsp-1.3.1/: autotest_include.h
fft/liquid-dsp-1.3.1/scripts/: autoscript
kalman/: CMakeLists.txt  kalman.cpp  kalman.csv  kalman3.cpp  kalman_.hpp  kalmanfilter.hpp  numercial.cpp  numerical.hpp
kalman/filtered test data/: stationary_filtered.csv
kalman/kalman-tests/: kalman3.cpp  kalman6.cpp
kalman/kalman/kalman/: kfilter.hpp  kfilter_impl.hpp
kalman/kalman_lib/kalman/: ekfilter.hpp  ekfilter_impl.hpp  kfilter.hpp  kfilter_impl.hpp  kmatrix.hpp
kalman/testing output files/: kalman.csv
release/visualization/: instructions.txt
src/: CMakeLists.txt
src/embedded/: 2_test.cpp  ADXL345.cpp  ADXL345.h  ADXL345_threaded.cpp  ADXL345_threaded.h  CMakeLists.txt  filtered.csv  ftaps2.csv  record_save.cpp  wiringpi_spi_test.cpp
src/fft/: .gitignore  CMakeLists.txt  test2.cpp
src/kalman/: kalman.cpp  kalman_.hpp  kalman_notes.txt  numercial.cpp  numerical.hpp
visualization/: .modules  instructions.txt
(+161 files in other folders)
